--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,9 +1,9 @@
 galaxy_info:
-  role_name: vector
-  namespace: DemoniumBlack
-  author: Fedorchuk Dmitriy
-  description: is
+  author: Alexei
+  description: This role install Vector
   company: Netology
+  role_name: vector  # if absent directory name hosting role is used instead
+  namespace: sergey  # if absent, author is used instead
 
   # If the issue tracker for your role is not on github, uncomment the
   # next line and provide a value
@@ -18,7 +18,7 @@ galaxy_info:
   # - CC-BY-4.0
   license: MIT
 
-  min_ansible_version: 2.1
+  min_ansible_version: "2.1"
 
   # If this a Container Enabled role, provide the minimum Ansible Container version.
   # min_ansible_container_version:
@@ -29,6 +29,10 @@ galaxy_info:
   # To view available platforms and versions (or releases), visit:
   # https://galaxy.ansible.com/api/v1/platforms/
   #
+  platforms:
+   - name: "Centos"
+     versions:
+     - "7"
   # platforms:
   # - name: Fedora
   #   versions:
