--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -1,16 +1,17 @@
 ---
+# This is an example playbook to execute Ansible tests.
 
 - name: Verify
   hosts: all
   gather_facts: false
-  vars:
-    vector_service: 'vector.service'
   tasks:
-    - name: 'Gather Local Services'
-      ansible.builtin.service_facts:
-      become: true
-    - name: 'Vector service assert'
-      ansible.builtin.assert:
-        that:
-          - "'{{ vector_service }}' in ansible_facts.services"
-          - "'running' == ansible_facts.services[vector_service].state"
+  - name: Example assertion
+    ansible.builtin.assert:
+      that: true
+  - name: Get Vector version
+    ansible.builtin.command: "vector --version"
+    changed_when: false
+    register: vector_version
+  - name: Assert Vector installation
+    ansible.builtin.assert:
+      that: { vector_version.rc == '0' }
