--- a/molecule/tox/converge.yml
+++ b/molecule/tox/converge.yml
@@ -1,7 +1,8 @@
 ---
 - name: Converge
   hosts: all
+  gather_facts: false
   tasks:
-    - name: "Include vector-role-no-molecule"
-      include_role:
-        name: "vector-role-no-molecule"
+    - name: "Include vector-role"
+      ansible.builtin.include_role:
+        name: "vector-role"
