--- a/molecule/tox/molecule.yml
+++ b/molecule/tox/molecule.yml
@@ -1,20 +1,20 @@
 ---
 dependency:
   name: galaxy
+role_name_check: 1
 driver:
   name: podman
-platforms:  
-  # - name: Ubuntu_latest
-  #   image: ubuntu:latest
-  #   dockerfile: Dockerfile
-  #   command: /lib/systemd/systemd
-  #   privileged: true
-  #   pre_build_image: false
-
-  - name: c8
-    image: centos/centos:stream8
-    command: /sbin/init
-    privileged: True
+lint: |
+  ansible-lint .
+  yamllint .
+platforms:
+  - name: centos7
+    image: docker.io/pycontribs/centos:7
+    pre_build_image: true
+provisioner:
+  name: ansible
+verifier:
+  name: ansible
 scenario:
   test_sequence:
     - destroy
